--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
+    "autoprefixer": "^10.4.20",
     "tailwindcss": "^3.4.17",
     "eslint": "^8",
     "eslint-config-next": "^15.0.0"
