--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ STRIPE_PRICE_PREMIUM_ANNUAL=price_...
 OPENAI_API_KEY=sk-...
 
 # Frontend Configuration
-NEXT_PUBLIC_API_URL=https://your-domain.com
+NEXT_PUBLIC_API_URL=http://localhost:8001
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_live_...
 NEXTAUTH_SECRET=your-nextauth-secret-min-32-characters
 NEXTAUTH_URL=https://your-domain.com
