--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,33 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next-auth": "^5.0.0-beta.25",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-label": "^2.1.7",
     "@stripe/stripe-js": "^4.10.0",
     "axios": "^1.7.9",
-    "swr": "^2.2.5",
-    "react-hook-form": "^7.54.2",
-    "@hookform/resolvers": "^3.9.1",
-    "zod": "^3.24.1",
-    "date-fns": "^4.1.0",
-    "recharts": "^2.15.0",
-    "framer-motion": "^11.15.0",
-    "lucide-react": "^0.468.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.6.0"
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.15.0",
+    "lucide-react": "^0.468.0",
+    "next": "^15.0.0",
+    "next-auth": "^5.0.0-beta.25",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.0",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
     "autoprefixer": "^10.4.20",
-    "tailwindcss": "^3.4.17",
     "eslint": "^8",
-    "eslint-config-next": "^15.0.0"
+    "eslint-config-next": "^15.0.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
